Fixed minor navbar issues on mobile

--- a/css/custom.css
+++ b/css/custom.css
@@ -3,6 +3,15 @@ body {
   background-color: white;
 }
 
+.navbar-custom {
+  margin-bottom: 0;
+  border-bottom: 1px solid rgba(0, 0, 0, 1);
+  text-transform: uppercase;
+  font-family: "Montserrat", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  color: black;
+  background-color: white;
+}
+
 .navbar-custom a {
   color: black;
 }
